--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "^1.3.2",
+    "expo": "^51.0.0",
+    "expo-asset": "~10.0.6",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-reanimated": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
